; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_blknum.c_ext2fs_bg_itable_unused_set.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_blknum.c_ext2fs_bg_itable_unused_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }
%struct.ext4_group_desc = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ext2fs_bg_itable_unused_set(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.ext4_group_desc*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call %struct.ext4_group_desc* @ext4fs_group_desc(%struct.TYPE_4__* %8, i32 %11, i32 %12)
  store %struct.ext4_group_desc* %13, %struct.ext4_group_desc** %7, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.ext4_group_desc*, %struct.ext4_group_desc** %7, align 8
  %16 = getelementptr inbounds %struct.ext4_group_desc, %struct.ext4_group_desc* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @ext2fs_has_feature_64bit(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %3
  %23 = load i32, i32* %6, align 4
  %24 = ashr i32 %23, 16
  %25 = load %struct.ext4_group_desc*, %struct.ext4_group_desc** %7, align 8
  %26 = getelementptr inbounds %struct.ext4_group_desc, %struct.ext4_group_desc* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 4
  br label %27

27:                                               ; preds = %22, %3
  ret void
}

declare dso_local %struct.ext4_group_desc* @ext4fs_group_desc(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i64 @ext2fs_has_feature_64bit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
